// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponenteErro.styles Container DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  flex: 1;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`ComponenteErro.styles IconeAlerta DEVE ser igual ao snapshot 1`] = `
<div>
  <svg
    class=""
    data-file-name="SvgIAlerta"
    fill="#999E9C"
    height="64"
    width="64"
  />
</div>
`;

exports[`ComponenteErro.styles IconeLupa DEVE ser igual ao snapshot 1`] = `
<div>
  <svg
    class=""
    data-file-name="SvgILupa"
    fill="#999E9C"
    height="64"
    width="64"
  />
</div>
`;

exports[`ComponenteErro.styles Mensagem DEVE ser igual ao snapshot 1`] = `
.c0 {
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-family: AvertaStd-Semibold;
  color: #434645;
  text-align: start;
  cursor: default;
  text-transform: none;
}

.c1 {
  margin-top: 24px;
}

<div>
  <span
    alturalinha="20"
    class="c0 c1"
    cor="#434645"
    cursor="default"
    estilo="semibold"
    tamanho="16"
  />
</div>
`;
